Fix overlapping divs in photos, modify pom.xml file

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -142,3 +142,8 @@ div.gallery img {
   width: 100%;
   height: auto;
 }
+
+/* Prevent overlapping divs */
+.clear {
+  clear: both;
+}
